--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,9 @@ jobs:
           node-version: '18'
 
       - name: Install Dependencies for backend
+        working-directory: ./backend
         run: npm install
 
       - name: Running backend Tests
+        working-directory: ./backend
         run: npm test
