--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,13 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: mongo-init
+
+    env:
+      PORT: ${{ secrets.PORT }}
+      MONGO_URI: ${{ secrets.MONGO_URI }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
